--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=youtube-clone
-
+###AWS S3 ###
+cloud.aws.region.static=ap-northeast-2
+cloud.aws.stack.auto=false
