--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.data.mongodb.database=youtube-clone
 ###AWS S3 ###
 cloud.aws.region.static=ap-northeast-2
 cloud.aws.stack.auto=false
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
