--- a/frontend/youtube-clone-ui/package.json
+++ b/frontend/youtube-clone-ui/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~9.1.7",
     "@angular/platform-browser-dynamic": "~9.1.7",
     "@angular/router": "~9.1.7",
+    "@videogular/ngx-videogular": "^4.1.0",
     "ngx-file-drop": "^11.1.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
@@ -31,9 +32,10 @@
     "@angular-devkit/build-angular": "~0.901.6",
     "@angular/cli": "~9.1.6",
     "@angular/compiler-cli": "~9.1.7",
-    "@types/node": "^12.11.1",
+    "@types/core-js": "^2.5.5",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
