--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -35,6 +35,10 @@
             <artifactId>spring-cloud-aws-autoconfigure</artifactId>
             <version>2.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
