--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-fcad9kyt.us.auth0.com/
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://dev-fcad9kyt.us.auth0.com/.well-known/jwks.json
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://dev-fcad9kyt.us.auth0.com/.well-known/jwks.json/
 auth0.audience=http://localhost:8080
