Add an endpoint to register a user

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.servlet.multipart.max-request-size=100MB
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-fcad9kyt.us.auth0.com/
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://dev-fcad9kyt.us.auth0.com/.well-known/jwks.json/
 auth0.audience=http://localhost:8080
+auth0.userInfoEndpoint=https://dev-fcad9kyt.us.auth0.com/userinfo
